--- a/services/investments/Dockerfile
+++ b/services/investments/Dockerfile
@@ -5,10 +5,12 @@ RUN apk update && \
     apk add --virtual build-deps gcc python-dev musl-dev && \
     apk add postgresql-dev && \
     apk add netcat-openbsd
-
+# RUN apt-get install -y build-essential libssl-dev libffi-dev python-dev
+# RUN apt-get install -y libreoffice
 # set working directory
 WORKDIR /usr/src/app
 
+RUN pip install --upgrade pip
 # add and install requirements
 COPY ./requirements.txt /usr/src/app/requirements.txt
 RUN pip install -r requirements.txt
